--- a/src/manifest.json
+++ b/src/manifest.json
@@ -15,5 +15,10 @@
     ],
     "browser_action": {
         "default_popup": "popup/popup.html"
+    },
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "HtmlTableGetter@local"
+        }
     }
 }
